# soirbhiochas

./: .gitignore  404.html  Caol le caol - Simple.ipynb  Caol le caol - Split of Exceptions.ipynb  Gender Guessing.ipynb  LICENSE  OTHER_POSSIBLE_CORRECTIONS.txt  README.md  build.sh  feed.xml  index.html  pyproject.toml  robots.txt  setup.cfg  sitemap.xml  suspected_typos.txt
.github/workflows/: jekyll.yml  visualizations.yml
assets/js/lunr/: lunr-store.js
docs/: Gemfile  _config.yml  index.markdown
docs/_data/: caol_le_caol.json  gender_guessing.json  languages.yml
docs/_includes/footer/: custom.html
docs/_includes/head/: custom.html
docs/_layouts/: home.html  posts.html
docs/en/_posts/: 2022-07-10-caol-le-caol.markdown  2022-07-24-gender.markdown
docs/ga/: index.markdown
docs/ga/_posts/: 2022-07-10-caol-le-caol.markdown  2022-07-24-gender.markdown
en/: index.html
en/grammar/2022/07/10/: caol-le-caol.html
en/grammar/2022/07/24/: gender.html
ga/: index.html
ga/grammar/2022/07/10/: caol-le-caol.html
ga/grammar/2022/07/24/: gender.html
soirbhiochas/: collections.py  díolaim.py  leabharlann.py  loadable.py  parsáil.py  rialacha.py  staidreamh.py  visualization.py
soirbhiochas/leabharlann/: __init__.py  _utils.py  caol_le_caol.py  pioc_inscne.py
