[metadata]
name = soirbhiochas
version = 0.1.0
description = "Seicire rialacha"
authors = ["Phil Weir <phil.t.weir@gmail.com>"]
license = "MIT"
python_requires = >=3.6,<4.0

[options]
packages = soirbhiochas

[install_requires]
python = ">=3.6,<4.0"
avantpy-extended = "^0.1.2"
requests = "0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
